# stashmunk

./: .env.example  .gitignore  README.md  makefile
server/: README.md  makefile  pyproject.toml  run.py
server/architecture/: data_flow.excalidraw
server/server/: __init__.py  exceptions.py  http_exceptions.py  main.py  settings.py  stashgres.py  worker_parser.py
server/server/agents/: entity_recognizer.py  sumclass.py  summarizer.py  text_embedding.py  usefull_classifier.py
server/server/api_clients/: unstructuredio.py
server/server/client/: __init__.py
server/server/document/: __init__.py  base.py  document.py  node.py  persist_stashgres.py  traversals.py
server/server/document/node/: __init__.py  factories.py
server/server/embedding/: __init__.py
server/server/routers/knowledge/: __init__.py  add.py
server/server/routers/stashes/: __init__.py  create.py  delete.py  info.py  list.py
server/server/types/: stash.py
server/server/utils/: __init__.py
server/server/workers/: client.py  parser.py
server/server/workers/parser/: __init__.py  client.py
server/tests/: run_test.py  test_node_data.json
server/tests/agents/: test_classifier.py
stashgres/: Dockerfile  entrypoint.sh
stashgres/docker-entrypoint-initdb.d/: 00-create-extension.sql
stashgres/etc/pgbouncer/: pgbouncer.ini  userlist.txt
